docs/tests/parser/functions/valid/RegularFuncWithReturn.src
fn int foo() {
    return 42;
}
