docs/tests/parser/functions/invalid/FuncExtraOpenParen.src
fn int foo((int a) {
}
